@@ -62,6 +62,19 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|analysis
+operator|.
+name|MockTokenizer
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|document
 operator|.
 name|Document
@@ -2042,6 +2055,249 @@ expr_stmt|;
 name|assertEquals
 argument_list|(
 literal|0
+argument_list|,
+name|hits
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|directory
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|test2
+specifier|public
+name|void
+name|test2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|directory
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|writer
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|directory
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|,
+name|MockTokenizer
+operator|.
+name|KEYWORD
+argument_list|,
+literal|false
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|addDoc
+argument_list|(
+literal|"LANGE"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"LUETH"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"PIRSING"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"RIEGEL"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"TRZECZIAK"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WALKER"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WBR"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WE"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WEB"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WEBE"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WEBER"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WEBERE"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WEBREE"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WEBEREI"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WBRE"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WITTKOPF"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WOJNAROWSKI"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|addDoc
+argument_list|(
+literal|"WRICKE"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|reader
+init|=
+name|writer
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|IndexSearcher
+name|searcher
+init|=
+name|newSearcher
+argument_list|(
+name|reader
+argument_list|)
+decl_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|FuzzyQuery
+name|query
+init|=
+operator|new
+name|FuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"WEBER"
+argument_list|)
+argument_list|,
+literal|2
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+comment|//query.setRewriteMethod(FuzzyQuery.SCORING_BOOLEAN_QUERY_REWRITE);
+name|ScoreDoc
+index|[]
+name|hits
+init|=
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|null
+argument_list|,
+literal|1000
+argument_list|)
+operator|.
+name|scoreDocs
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|8
 argument_list|,
 name|hits
 operator|.
