@@ -4021,216 +4021,23 @@ literal|"field"
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|q
-operator|=
-operator|new
-name|SlowFuzzyQuery
-argument_list|(
-operator|new
-name|Term
-argument_list|(
-literal|"field"
-argument_list|,
-literal|"t"
-argument_list|)
-argument_list|,
-literal|3
-argument_list|)
-expr_stmt|;
-name|hits
-operator|=
-name|searcher
-operator|.
-name|search
-argument_list|(
-name|q
-argument_list|,
-literal|10
-argument_list|)
-operator|.
-name|scoreDocs
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|1
-argument_list|,
-name|hits
-operator|.
-name|length
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"test"
-argument_list|,
-name|searcher
-operator|.
-name|doc
-argument_list|(
-name|hits
-index|[
-literal|0
-index|]
-operator|.
-name|doc
-argument_list|)
-operator|.
-name|get
-argument_list|(
-literal|"field"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|q
-operator|=
-operator|new
-name|SlowFuzzyQuery
-argument_list|(
-operator|new
-name|Term
-argument_list|(
-literal|"field"
-argument_list|,
-literal|"a"
-argument_list|)
-argument_list|,
-literal|4f
-argument_list|,
-literal|0
-argument_list|,
-literal|50
-argument_list|)
-expr_stmt|;
-name|hits
-operator|=
-name|searcher
-operator|.
-name|search
-argument_list|(
-name|q
-argument_list|,
-literal|10
-argument_list|)
-operator|.
-name|scoreDocs
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|1
-argument_list|,
-name|hits
-operator|.
-name|length
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"test"
-argument_list|,
-name|searcher
-operator|.
-name|doc
-argument_list|(
-name|hits
-index|[
-literal|0
-index|]
-operator|.
-name|doc
-argument_list|)
-operator|.
-name|get
-argument_list|(
-literal|"field"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|q
-operator|=
-operator|new
-name|SlowFuzzyQuery
-argument_list|(
-operator|new
-name|Term
-argument_list|(
-literal|"field"
-argument_list|,
-literal|"a"
-argument_list|)
-argument_list|,
-literal|6f
-argument_list|,
-literal|0
-argument_list|,
-literal|50
-argument_list|)
-expr_stmt|;
-name|hits
-operator|=
-name|searcher
-operator|.
-name|search
-argument_list|(
-name|q
-argument_list|,
-literal|10
-argument_list|)
-operator|.
-name|scoreDocs
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|2
-argument_list|,
-name|hits
-operator|.
-name|length
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"test"
-argument_list|,
-name|searcher
-operator|.
-name|doc
-argument_list|(
-name|hits
-index|[
-literal|0
-index|]
-operator|.
-name|doc
-argument_list|)
-operator|.
-name|get
-argument_list|(
-literal|"field"
-argument_list|)
-argument_list|)
-expr_stmt|;
-name|assertEquals
-argument_list|(
-literal|"foobar"
-argument_list|,
-name|searcher
-operator|.
-name|doc
-argument_list|(
-name|hits
-index|[
-literal|1
-index|]
-operator|.
-name|doc
-argument_list|)
-operator|.
-name|get
-argument_list|(
-literal|"field"
-argument_list|)
-argument_list|)
-expr_stmt|;
+comment|// TODO: cannot really be supported given the legacy scoring
+comment|// system which scores negative, if the distance> min term len,
+comment|// so such matches were always impossible with lucene 3.x, etc
+comment|//
+comment|//q = new SlowFuzzyQuery(new Term("field", "t"), 3);
+comment|//hits = searcher.search(q, 10).scoreDocs;
+comment|//assertEquals(1, hits.length);
+comment|//assertEquals("test", searcher.doc(hits[0].doc).get("field"));
+comment|// q = new SlowFuzzyQuery(new Term("field", "a"), 4f, 0, 50);
+comment|// hits = searcher.search(q, 10).scoreDocs;
+comment|// assertEquals(1, hits.length);
+comment|// assertEquals("test", searcher.doc(hits[0].doc).get("field"));
+comment|// q = new SlowFuzzyQuery(new Term("field", "a"), 6f, 0, 50);
+comment|// hits = searcher.search(q, 10).scoreDocs;
+comment|// assertEquals(2, hits.length);
+comment|// assertEquals("test", searcher.doc(hits[0].doc).get("field"));
+comment|// assertEquals("foobar", searcher.doc(hits[1].doc).get("field"));
 name|reader
 operator|.
 name|close
